# checked-arithmetic

./: CHANGELOG.md  Makefile  checked-arithmetic.cabal
.github/workflows/: ci.yml  linting.yml
src/: Checked.hs
