cabal-version:   3.4
name:            checked-arithmetic
version:         0.1.0.0
synopsis:        Checked modular arithmetic

-- description:
license:         BSD-3-Clause
license-file:    LICENSE
author:          Hécate Moonlight
maintainer:      hecate+github@glitchbra.in

-- copyright:
category:        Mathematics
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  Checked

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base      ^>=4.16.3.0
    , ghc-prim

  hs-source-dirs:   src
  default-language: GHC2021

test-suite checked-arithmetic-test
  import:           warnings
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base                ^>=4.16.3.0
    , checked-arithmetic
